Core/client/src/assets/styles.scss
*{
    margin: 0px;
    padding: 0px;
    font-family: 'Avenir', Helvetica, Arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-align: center;
    color: #2c3e50;
}
#app{
    width: 100vw;
    height: 100vh;
}

.grid-container{
    display: grid;
    width: 100%;
    height: 100%;
    grid-template-columns: 300px 1fr;
    grid-template-rows: 80px 1fr;
    grid-template-areas: 
    "nav nav"
    "tickets map";

    .nav-wrap{
        grid-area: nav;
        background-color: #57B8FF;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
    }
    .tickets-wrap{
        grid-area: tickets;
        background-color: #fd6b6d;
    }
    .map-wrap{
        grid-area: map;
        iframe{
            border: none;
        }
    }
    
}

